add_subdirectory(test0)
add_subdirectory(text)
add_subdirectory(TextureColor)
add_subdirectory(CameraTest)
add_subdirectory(SyncOperation)
add_subdirectory(OffScreenRender)
add_subdirectory(Picker)
add_subdirectory(Collison)
add_subdirectory(BlockTest)
add_subdirectory(BarrierTest)
add_subdirectory(MutexTest)
add_subdirectory(GetThreadTest)
add_subdirectory(BlockCountTest)
add_subdirectory(Drawground)
add_subdirectory(geometryShader)
ADD_SUBDIRECTORY(kornerr-osg-deferred-shading)
add_subdirectory(deferredShading)
add_subdirectory(EffectCompositor)
add_subdirectory(effectcompositorTest)
add_subdirectory(osgGL3)
add_subdirectory(Draw2D)
add_subdirectory(osgCascadeShadowMap)
add_subdirectory(Water)
add_subdirectory(Bumpping)
add_subdirectory(Bumpping2)
add_subdirectory(Sphere)
add_subdirectory(SphereGlobal)
add_subdirectory(HDRSky)
add_subdirectory(DynamicImage)
add_subdirectory(Ortho)
add_subdirectory(osgkeyboard)
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET_PROPERTY(TARGET BlockTest PROPERTY FOLDER "OpenThreads")
SET_PROPERTY(TARGET BarrierTest PROPERTY FOLDER "OpenThreads")
SET_PROPERTY(TARGET MutexTest PROPERTY FOLDER "OpenThreads")
SET_PROPERTY(TARGET GetThreadTest PROPERTY FOLDER "OpenThreads")
SET_PROPERTY(TARGET BlockCountTest PROPERTY FOLDER "OpenThreads")
